These are the updated files

--- a/index.html
+++ b/index.html
@@ -9,24 +9,23 @@
 <body>
   <table cellspacing = "30">
     <tr>
-      <td>  <img src="jonasland.jpg" alt="Image of Jonas Land (he is incredibly goodlooking)"></td>
+      <td>  <img src="jonas.jpg" alt="Image of Jonas Land (he is incredibly goodlooking)"></td>
       <td><h1>Jonas Land</h1>
       <p><em>Creator of <strong>BlueJamProjects</strong></em></p>
       <br>
-      <p>Creator of web and mobile applications and I have recently become involved in creating websites.</p></td>
+      <p>A creator of web and mobile applications and that has recently become involved in creating websites.</p></td>
     </tr>
   </table>
 
 
   <hr size="3" noshade>
-  <h3>Things I have made</h3>
+  <h3>Apps I've lovingly created:</h3>
   <ul>
-    <li>MTG Life Counter App</li>
+    <li><a href = "https://play.google.com/store/apps/details?id=com.bluejam.mtg_working_app&hl=en">MTG Life Counter App</a></li>
     <li><a href="https://web-test-a9680.web.app/#/">Spiritual Gifts Questionaire</a></li>
-    <li>Birthday Tracker App</li>
   </ul>
   <hr>
-  <h3>My hobbies:</h3>
+  <h3>Things I do when I should be working:</h3>
   <ol>
     <li>Running</li>
     <li>Reading</li>
@@ -39,17 +38,17 @@
     <th>
       <tr>
         <th>Year</th>
-        <th>Work</th>
+        <th>What I did</th>
       </tr>
     </th>
     <tbody>
       <tr>
-        <td>2020</td>
-        <td>Online HE at Advantage Learn</td>
+        <td>2019</td>
+        <td>Not much</td>
       </tr>
       <tr>
         <td>2020</td>
-        <td>Website Creator</td>
+        <td>This</td>
       </tr>
     </tbody>
     <tfoot>
