--- a/contact-details.html
+++ b/contact-details.html
@@ -7,9 +7,9 @@
 </head>
 
 <body>
-  <h1>These are the methods you can use to contact me</h1>
+  <h1>If for some reason you're seeing this page, here's how you could contact me:</h1>
   <ul>
-    <li>Phone : (+27) 76 697 3509</li>
+    <li>Phone : 555-555-5555</li>
     <li>Email : bluejamprojects@gmail.com</li>
     <li>Instagram: @the_jonas_land</li>
   </ul>
@@ -17,15 +17,15 @@
   <hr>
   <br>
   <form enctype = "text/plain" action="mailto:bluejamprojects@gmail.com" method="post">
-    <label>Your name:</label>
+    <label>Your preferred name:</label>
     <br>
     <input type="text" name="yourName" value="">
     <br>
-    <label>Your email:</label>
+    <label>Your email address:</label>
     <br>
     <input type="email" name="yourEmail" value="">
     <br>
-    <label>Your message:</label>
+    <label>What you want to say to me (I won't be get it but it's the thought that counts):</label>
     <br>
     <textarea name="yourMessage" rows="8" cols="80"></textarea>
     <br>
