--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <tr>
       <td>  <img src="jonas.jpg" alt="Image of Jonas Land (he is incredibly goodlooking)"></td>
       <td><h1>Jonas Land</h1>
-      <p><em>Creator of <strong>BlueJamProjects</strong></em></p>
+      <p><em>Aka <strong>BlueJamProjects</strong></em></p>
       <br>
       <p>A creator of web and mobile applications and that has recently become involved in creating websites.</p></td>
     </tr>
